<resources>
    <string name="app_name">MapProjectBook</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="add_image">Add Image</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="title_activity_home2">HomeActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

</resources>